--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -2,11 +2,28 @@
     float: right !important;
 }
 
-footer {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
+html {
+    position: relative;
+    min-height: 100%;
+}
+body {
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
+}
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    /* Set the fixed height of the footer here */
+    height: 60px;
+    line-height: 60px; /* Vertically center the text there */
+    background-color: #f5f5f5;
 }
 
-footer p {
-    margin-bottom: .25rem;
+nav {
+    background-color: #f5f5f5;
+}
+
+.footer p{
+    margin-bottom: 0;
 }
