Center and fix text on register button

--- a/src/views/registration.hbs
+++ b/src/views/registration.hbs
@@ -33,8 +33,8 @@
                 <input name="confirmPassword" type="password" class="form-control" id="confirmPasswordInput"
                        placeholder="Re-enter your password here">
             </div>
-            <div class="row justify-content-md-center w-50" style="margin-top: 20px">
-                <button type="submit" class="btn btn-primary">Login</button>
+            <div class="row justify-content-md-center w-50 mx-auto" style="margin-top: 20px">
+                <button type="submit" class="btn btn-primary">Register</button>
             </div>
         </form>
     </div>
