--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -16,7 +16,7 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="collapse navbar-collapse mr-auto" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -32,6 +32,9 @@
                     </li>
                 </ul>
             </div>
+            {{#if showLogout}}
+                <a class="btn btn-outline-success my-2 my-sm-0" href="/logout">Log Out</a>
+            {{/if}}
         </div>
     </nav>
     <div class="container-fluid wrapper">
